--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.10.3",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
-    "electronmon": "^2.0.2"
+    "electronmon": "^2.0.2",
+    "jquery": "^3.6.3"
   }
 }
